--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,4 +40,4 @@ models:
     # Applies to all files under models/example/
     example:
       +materialized: table
-      shema : silver
+      schema : silver
